--- a/templates/home.html
+++ b/templates/home.html
@@ -1,3 +1,43 @@
-<h1>
-    Hello World
-</h1>
+<!DOCTYPE html>
+<html >
+
+<head>
+  <meta charset="UTF-8">
+  <title>ML API</title>
+  <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Arimo' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Hind:300' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
+
+  
+</head>
+
+<body>
+ <div class="login">
+	<h1>heart disease Prediction</h1>
+
+     <!-- Main Input For Receiving Query to our ML -->
+    <form action="{{ url_for('predict')}}"method="post">
+        <input type="text" name="thal" placeholder="thal" required="required" /><br>
+        <input type="text" name="ca" placeholder="ca" required="required" /><br>
+        <input type="text" name="Exercise" placeholder="Exercise" required="required" /><br>
+        <input type="text" name="Chest_Pain_Type" placeholder="Chest Pain Type" required="required" /><br>
+        <input type="text" name="oldpeak" placeholder="oldpeak" required="required" /><br>
+        <input type="text" name="maximum_heart_rate" placeholder="Maximum Heart Rate" required="required" /><br>
+        <input type="text" name="slope" placeholder="slope" required="required" /><br>
+        <input type="text" name="Sex" placeholder="Sex" required="required" /><br>
+        <input type="text" name="Age" placeholder="Age" required="required" /><br>
+       
+
+        <button type="submit" class="btn btn-primary btn-block btn-large">Predict</button>
+    </form>
+
+   <br>
+   <br>
+  
+   
+ </div>
+ {{prediction_text}}
+
+</body>
+</html>
